fixxing bugs 'Qoute' to 'Quote'

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <div class="container">
         <header class="header">
             <h1>Byte Snack</h1>
-            <p class="subtitle">One day One Qoutes and Fact</p>
+            <p class="subtitle">One day One Quotes and Fact</p>
         </header>
 
         <!-- Qoute Section -->
-        <div class="card qoute-card">
+        <div class="card quote-card">
             <div class="card-header">
-                <h2>Qoute of the Day</h2>
+                <h2>Quote of the Day</h2>
             </div>
             <div class="card-content">
-                <div class="icon-qoute">"</div>
-                <p id="qoute-text" class="qoute-text">Loading your Qoute...</p>
-                <p id="qoute-author" class="qoute-author">- Unknown</p>
+                <div class="icon-quote">"</div>
+                <p id="quote-text" class="quote-text">Loading your Quote...</p>
+                <p id="quote-author" class="quote-author">- Unknown</p>
             </div>
             <div class="button-group">
-                <button id="new-qoute-btn" class="btn btn-primary">New Qoute</button>
-                <button id="copy-qoute-btn" class="btn btn-secondary">Copy</button>
+                <button id="new-quote-btn" class="btn btn-primary">New Quote</button>
+                <button id="copy-quote-btn" class="btn btn-secondary">Copy</button>
             </div>
         </div>
 
